--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "id": "jid1-YA4JOaQVLNA1KQ",
   "description": "Allows manipulation of the playback rate of HTML5 videos",
   "author": "ispedals",
+  "homepage": "https://github.com/ispedals/Faster-Video",
   "license": "MIT",
   "version": "1.0",
   "permissions": {"private-browsing": true}
