--- a/package.json
+++ b/package.json
@@ -6,6 +6,20 @@
   "author": "ispedals",
   "homepage": "https://github.com/ispedals/Faster-Video",
   "license": "MIT",
-  "version": "1.1.0",
-  "permissions": {"private-browsing": true}
+  "version": "2.0.0",
+  "permissions": {"private-browsing": true},
+  "preferences": [{
+        "name": "speeds",
+        "title": "Video Speeds",
+        "description": "Sets which video speeds to choose from (comma-separated)",
+        "type": "string",
+        "value": "0.5, 1, 3, 5"
+    },
+    {
+        "name": "modifiers",
+        "title": "Video Speed Modifiers",
+        "description": "Sets by which units one can change the video speed (comma-separated)",
+        "type": "string",
+        "value": "0.25, 1"
+  }]
 }
